add controller socialmedia
